--- a/package.json
+++ b/package.json
@@ -2,14 +2,49 @@
   "name": "nts-elysia",
   "version": "1.0.50",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server ./src/index.ts",
+    "dev": "bun run --watch src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/bearer": "^1.0.2",
+    "@elysiajs/cors": "^1.0.2",
+    "@elysiajs/cron": "^1.0.3",
+    "@elysiajs/eden": "^1.3.2",
+    "@elysiajs/jwt": "^1.0.2",
+    "@elysiajs/swagger": "^1.0.3",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@prisma/client": "^6.10.1",
+    "@sendgrid/mail": "^8.1.3",
+    "arctic": "latest",
+    "bcryptjs": "^2.4.3",
+    "doku-nodejs-library": "^1.0.51",
+    "elysia": "^1.3.5",
+    "elysia-oauth2": "^1.2.0",
+    "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^10.2.1",
+    "midtrans-client": "^1.3.1",
+    "nodemailer": "^6.9.13",
+    "react-email": "*",
+    "redis": "^4.6.14",
+    "resend": "^3.2.0",
+    "slugify": "^1.6.6",
+    "stripe": "^15.8.0",
+    "ws": "^8.17.0",
+    "xendit-node": "^7.0.0"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/bun": "latest",
+    "@types/ioredis": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^6.4.15",
+    "@types/paypal__checkout-server-sdk": "^1.0.8",
+    "@types/ws": "^8.5.10",
+    "bun-types": "latest",
+    "prisma": "^6.10.1",
+    "typescript": "^5.4.5"
   },
   "module": "src/index.js"
 }
