chore(package): update build script and vercel configuration
- Modify the build script to include 'prisma generate' before building the project.
- Adjust the vercel configuration to correct the source and destination paths for the build.

This ensures that the Prisma client is generated before the build process, improving deployment consistency.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nts-elysia",
   "version": "1.0.50",
   "scripts": {
-    "build": "bun build src/index.ts",
+    "build": "prisma generate && bun build src/index.ts",
     "dev": "bun run --watch src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
