--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/index.ts",
-      "use": "@vercel/bun"
+      "src": "./src/index.ts"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.ts"
+      "dest": "/src/index.ts"
     }
   ]
 }
