chore(vercel): update configuration for functions and rewrites
- Added "$schema" for Vercel configuration.
- Changed "builds" to "functions" for defining serverless functions.
- Updated "src" and "dest" keys to "source" and "destination" for rewrites.

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "builds": [
-    {
-      "src": "./src/index.ts"
+  "functions": {
+    "api/index.ts": {
+      "runtime": "bun"
     }
-  ],
-  "routes": [
+  },
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/src/index.ts"
+      "source": "/(.*)",
+      "destination": "/src/index.ts"
     }
   ]
 }
