chore(vercel): update runtime for api function
- Changed the runtime for the api/index.ts function to use the specific version of the Vercel Bun runtime.
- This ensures compatibility and leverages the latest features and fixes from the specified version.

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "version": 2,
   "functions": {
     "api/index.ts": {
-      "runtime": "bun"
+      "runtime": "@godsreveal/vercel-bun@0.2.4"
     }
   },
   "rewrites": [
