--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
   "functions": {
-    "api/index.ts": {
+    "src/index.ts": {
       "runtime": "@godsreveal/vercel-bun@0.2.4"
     }
   },
