--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@prisma/client": "^6.10.1",
     "@sendgrid/mail": "^8.1.3",
+    "@upstash/redis": "^1.35.1",
     "arctic": "latest",
     "bcryptjs": "^2.4.3",
     "doku-nodejs-library": "^1.0.51",
     "elysia": "^1.3.5",
     "elysia-oauth2": "^1.2.0",
-    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mailgun.js": "^10.2.1",
     "midtrans-client": "^1.3.1",
     "nodemailer": "^6.9.13",
     "react-email": "*",
-    "redis": "^4.6.14",
     "resend": "^3.2.0",
     "slugify": "^1.6.6",
     "stripe": "^15.8.0",
@@ -37,7 +36,6 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/bun": "latest",
-    "@types/ioredis": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^6.4.15",
     "@types/paypal__checkout-server-sdk": "^1.0.8",
