--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nts-elysia",
   "version": "1.0.50",
   "scripts": {
-    "build": "prisma generate && bun build src/index.ts",
-    "dev": "bun run --watch src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "prisma generate && bun build --compile --minify-whitespace --minify-syntax  --target bun --outfile server ./src/index.ts",
+    "dev:watch": "bun run --watch src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_ENV=production && bun src/index.ts"
   },
   "dependencies": {
     "@elysiajs/bearer": "^1.0.2",
