refactor(vercel): update runtime version in configuration
- Change runtime from "vercel-bun@latest" to "@godsreveal/vercel-bun@0.2.4"
- Remove version key from the configuration

This update ensures compatibility with the specified version of the Vercel Bun runtime.

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
   "functions": {
     "src/index.ts": {
-      "runtime": "vercel-bun@latest",
+      "runtime": "@godsreveal/vercel-bun@0.2.4",
       "includeFiles": "public/**/*"
     }
   },
