feat(api): add initial API implementation with routing
- Create a new API entry point in `api/index.ts`.
- Implement middleware for CORS, JWT, and Swagger documentation.
- Integrate various modules for user, articles, payments, and more.
- Set up the server to listen on a specified port and provide a welcome message.

This commit establishes the foundational structure for the NTS Elysia API.

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
-    "src/index.ts": {
+    "api/index.ts": {
       "runtime": "@godsreveal/vercel-bun@0.2.4",
       "includeFiles": "public/**/*"
     }
@@ -9,7 +9,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "src/index.ts"
+      "destination": "api/index.ts"
     }
   ]
 }
