refactor(vercel): simplify configuration by removing unused functions and rewrites
- Removed the functions and rewrites sections from the Vercel configuration.
- Updated the devCommand to use 'bun src/index.ts' for local development.
- Streamlined the configuration for better clarity and maintainability.

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "functions": {
-    "api/index.ts": {
-      "runtime": "@godsreveal/vercel-bun@0.2.4",
-      "includeFiles": "public/**/*"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "api/index.ts"
-    }
-  ]
+  "devCommand": "bun src/index.ts"
 }
