--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "devCommand": "bun src/index.ts"
+  "functions": {
+    "api/index.ts": {
+      "runtime": "@godsreveal/vercel-bun@0.2.4"
+    }
+  },
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/index.ts" }]
 }
